# my-linux-tools

./: .gitignore  .gitmodules  MIT-LICENSE.txt  README.md  desktop-settings-enable.sh  enable-tools.sh  essential-cmd-install.sh  essential-desk-install.sh  tar_this.sh  use-bash.sh
cmdline-settings/ack-setting/: .ackrc
cmdline-settings/apt-source-setting/crane-source-list.d/: aliyun-package-repositories.list
cmdline-settings/bash-setting/: bash-utils
cmdline-settings/bash-setting/.bash-utils/: base-functions.sh  bash-alias.sh  bash-prompt.sh  completion.sh
cmdline-settings/common-shell-setting/: .gitignore  README.md  common-shell-utils
cmdline-settings/common-shell-setting/.common-shell-utils/: .gitignore  README.md  a-my-DirEnv.sh  a-my-base-functions.sh  a-my-shell-settings.sh  a-top-source-alias.sh  base-function.sh  bash-debugger.sh  error-check.sh  fun_list.txt  (+29 more)
cmdline-settings/gdb-init-setting/: .gdbinit
cmdline-settings/git-setting/: .gitconfig  .gitignore  gitremote-记录
cmdline-settings/profile-setting/: myProfile.d
cmdline-settings/pylint-setting/: .pylintrc
cmdline-settings/ssh-setting/: config
cmdline-settings/svn-setting/: .config  super_cleanup.bat
cmdline-settings/sysctl-settings/: my-vm.conf
cmdline-settings/tmux-setting/: .tmux.conf  .tmux_local_template.conf  keyboard-ctrlcapslock-back
cmdline-settings/vimperator-setting/: .vimperatorrc
cmdline-settings/xmodmap-setting/: .Xmodmap  .Xmodtoggle  Xmodtoggle
cmdline-settings/zsh-setting/: .zshrc  oh-my-zsh-record.txt  zsh-utils  zsh.example
desktop-settings/autostart-setting/: guake.desktop  tint2.desktop
desktop-settings/dash-app-example/: gitk.desktop
desktop-settings/docker-setting/: README.md  backup.sh  daemon-sample.json  daemon.json  docker  restore.sh
desktop-settings/fcitx-setting/: README.md  backup.sh  config
desktop-settings/fusuma/: config.yml
desktop-settings/gnome-conf-setting/: README.md  backup.sh  base.sh  bookmarks  conf-gitignore  gnome-terminal-profiles.dconf  nemo-profile.dconf  renger-bookmarks  restore.sh
desktop-settings/go-golang-setting/: README.md  install.sh
desktop-settings/guake-all-setting/: README.txt  backup.sh  base.sh  guake-autostart.desktop  guake-prefs.desktop  guake.conf  guake.desktop  install.sh  restore.sh  uninstall.sh
desktop-settings/linux-mint-cinnamon-setting/: readme.md
desktop-settings/maven-setting/: pom.xml  restore.sh  settings.xml
desktop-settings/mongo-setting/: .mongorc.js  copy.sh
desktop-settings/polipo-setting/: config  place.sh
desktop-settings/privoxy-setting/: config
desktop-settings/python-setting/: .pythonrc  Pipfile  README.md  pip.conf
desktop-settings/shortcut-keybindings-setting/: README.md  backup.sh  base.sh  keybindings-settings.conf  restore.sh
misc-opes/after-os-install-ope/: filter-package.sh  go-package.txt  if-Chinaese-after-OS-install.sh  lib.dev.txt  mkdir-after-os-install.sh  no-center-Ubuntu-install-装机必备-list.txt  no-essentia-in-center.txt  pip-python.txt  ppa.txt  ubuntu-essential-list.txt  windows-essential-list.txt
misc-opes/chrome-crx/: Switchy-Omega-bypass-list-proxy.list  chrome-qq.srx  chrome-search-engine  install-crx-教程.txt
misc-opes/cmake-ope/: question.txt  record.txt
misc-opes/cmake-ope/example/cmake-project/: CMakeLists.txt
misc-opes/cmake-ope/example/cmake-project/DbAccess/test/: CMakeLists.txt
misc-opes/cmake-ope/example/cmake-project/imagine_control/: CMakeLists.txt
misc-opes/cmake-ope/example/cmake-project/imagine_interface/: CMakeLists.txt
misc-opes/cmake-ope/example/cmake-project/imagine_logic/: CMakeLists.txt
misc-opes/cmake-ope/example/cumtom-target-default/: CMakeLists.txt
misc-opes/cmake-ope/example/custome-command-timestamp/: CMakeLists.txt  src.cpp
misc-opes/cmake-ope/example/export-visibility-version-list/: CMakeLists.txt  add.c  export.version  gene.sh  main.c
misc-opes/cmake-ope/example/install/: CMakeLists.txt
misc-opes/cmake-ope/example/install/src/: CMakeLists.txt  main.cpp
misc-opes/cmake-ope/example/myFindPackage-自定义FindPACKAGE/: CMakeLists.txt  FindHELLO.cmake
misc-opes/cmake-ope/example/myFindPackage-自定义FindPACKAGE/src/: CMakeLists.txt  main.cpp
misc-opes/cmake-ope/example/object-library/: CMakeLists.txt
misc-opes/cmake-ope/example/real-use/: CMakeLists.txt  CMakeLists.txt-another
misc-opes/cmake-ope/example/shared-so/: CMakeLists.txt
misc-opes/cmake-ope/example/simple/: CMakeLists.txt
misc-opes/cmake-ope/example/t3-shared-generate/: CMakeLists.txt
misc-opes/cmake-ope/example/t3-shared-generate/src/: CMakeLists.txt  hello.cpp  hello.hpp
misc-opes/cmake-ope/example/t4-include-link/: CMakeLists.txt
misc-opes/cmake-ope/example/t4-include-link/src/: CMakeLists.txt  main.cpp
misc-opes/cmake-ope/example/test-cmake-package-deb/: CMakeLists.txt  README.md  addList.sh  pkgLists.cmake  ubuntu-essential-list.txt
misc-opes/cmake-ope/template/: CMakeLists.txt  src-CMakeLists.txt
misc-opes/dia-draw-ope/: mk-dfd.sh  template.dia
misc-opes/linux-ope/: Ubuntu-dash中加入图标.txt  english-search-google-bing.txt  g-git修改submodule远程仓库地址.txt  gdb-mess.txt  guake-bug.txt  install-sogou-安装搜狗输入法后无法切换中英文.txt  l登录输入密码无响应.txt  sogou搜狗输入法安装.txt  s查看某个被占用的快捷键.txt  tmux-pane-operation.txt  tmux-终端乱码-难以关掉终端-解决方案.txt  ubuntu14.04--升级到--ubuntu16.04的改变.txt  win-D-show-desktop.txt  xmodmap-配置好后-终端可以-浏览器不可以.txt
misc-opes/linux-progaming-ope/: ipcrm.txt
misc-opes/mine-挖矿/: something
misc-opes/mint-linux-desktop-ope/: cinnamon-faq.md
misc-opes/mongodb-ope/: mongodb-faq.md
misc-opes/mysql-common-ope/: person.sql
misc-opes/pre-os-install-ope/: 分区设计.txt
misc-opes/shell-bash-zsh-ope/: cron.example  dd-刻盘.sh  echo-color-带颜色输出.sh  expect-example.sh  expect-scp.sh  git-clean.sh  git-remote-已存在本地仓库-如何push到远程仓库.sh  gsetting.sh  install-on-my-zsh.sh  lz.sh  mkdir.sh  mount-create-tmpfs.sh  nc-妙用.txt  oh-my-zsh-record.txt  readlink.sh  s-string-truncate.sh  s-可以sudo-不知道root密码-如何修改root密码.txt  scp.sh  shell-bash-zsh-ope.sh  split.sh  sudo-exec-执行shell内置命令.txt  swap-ctrl-capslock.txt  tetris-俄罗斯方块.sh  v-各种括号.txt  var-at-vs-star.sh
(+324 files in other folders)
